--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@ $(document).ready(function () {
 
 
 <p>Welcome to my website!</p>
+<p>My name is Cassidy, and I’m a 4th year student at the University of Toronto.</p>
+<p>I am currently a TA for STA130: An Introduction to Statistical Reasoning and Data Science. I’ll be using this website primarily to host materials for STA130 tutorials (for now).</p>
+<p><br></p>
+<p><a href="https://github.com/wangcassidy"><strong>GitHub</strong></a></p>
 
 
 
