updated tutorial notes for week 5

--- a/teaching.html
+++ b/teaching.html
@@ -578,6 +578,10 @@ df</code></pre>
 </div>
 <div id="additional-resources-3" class="section level3">
 <h3>Additional Resources</h3>
+<ul>
+<li><a href="https://www.khanacademy.org/math/statistics-probability/significance-tests-one-sample/idea-of-significance-tests/v/simple-hypothesis-testing">Hypothesis testing and p-values (Khan Academy)</a></li>
+<li><a href="https://www.khanacademy.org/math/statistics-probability/sampling-distributions-library">Sampling distributions (Khan Academy)</a></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -587,15 +591,55 @@ df</code></pre>
 <h3>Using LaTeX in R Markdown</h3>
 <p><strong>Put single dollar signs ($) around your formulas if you want them to be in line with your text. For example:</strong></p>
 <p><code>My null hypothesis is $H_0: p_{heads} = 0.5$ and my alternative hypothesis is $H_A: p_{heads} \neq 0.5$.</code></p>
-<p><em>is displayed as:</em></p>
+<p><strong>is displayed as:</strong></p>
 <p>My null hypothesis is <span class="math inline">\(H_0: p_{heads} = 0.5\)</span> and my alternative hypothesis is <span class="math inline">\(H_A: p_{heads} \neq 0.5\)</span>.</p>
 <p><br></p>
-<p><strong>Put double dollar signs (<code>$$</code>) around your formulas if you do not want them to be in line with your text. For example: </strong></p>
+<p><strong>Put double dollar signs (<code>$$</code>) around your formulas if you do not want them to be in line with your text. For example:</strong></p>
 <p><code>My hypotheses are: $$ H_0: p_{heads} = 0.5  \\ H_A: p_{heads} \neq 0.5 $$</code></p>
-<p><em>is displayed as:</em></p>
+<p><strong>is displayed as:</strong></p>
 <p>My hypotheses are: <span class="math display">\[ H_0: p_{heads} = 0.5  \\ H_A: p_{heads} \neq 0.5 \]</span></p>
 <p><br></p>
 <p>When using R Markdown, never copy and paste symbols from external sources.</p>
+</div>
+<div id="project-proposal-tips" class="section level3">
+<h3>Project Proposal Tips</h3>
+<ul>
+<li>Read the rubric carefully<br />
+</li>
+<li>Structure your writing using headings! Please don’t write an essay. Your structure might look something like this:<br />
+<em>Research question 1</em><br />
+<em>Population for research question 1</em><br />
+<em>Data Visualization for research question 1</em><br />
+<em>Methods for research question 1</em><br />
+<em>Research question 2</em><br />
+<em>Population for research question 2</em><br />
+<em>Data Visualization for research question 2</em><br />
+<em>Methods for research question 2</em><br />
+<em>Research question 3</em><br />
+<em>Population for research question 3</em><br />
+<em>Data Visualization for research question 3</em><br />
+<em>Methods for research question 3</em></li>
+</ul>
+<p><strong>Visualizations</strong></p>
+<ul>
+<li>When describing a visualization, make sure to clearly state what is on your x-axis/y-axis.<br />
+</li>
+<li>Clearly state the type of visualization you are using (e.g. histogram, boxplot, barplot).<br />
+</li>
+<li>Your visualization should be appropriate for your audience. In other words, do <strong>not</strong> use a sampling distribution.<br />
+</li>
+<li>Make sure that your visualization is appropriate for your variable type. For example, you cannot use a histogram for a categorical variable.</li>
+<li>Your visualization should help you to answer your research question.</li>
+</ul>
+<p><strong>Methods</strong></p>
+<ul>
+<li>Must be a <em>statistical</em> method.</li>
+<li>If you are using linear regression or classification trees, clearly state what your response and predictor variables are.</li>
+<li>If you are doing a 2 group hypothesis test, make sure that you clearly state what the 2 groups are (e.g. males and females).<br />
+</li>
+<li>Your method should help you to answer your research question.</li>
+</ul>
+<p><br></p>
 </div>
 <div id="practice-problems-3" class="section level3">
 <h3>Practice Problems</h3>
